--- a/.github/workflows/llama-build-cpu.yaml
+++ b/.github/workflows/llama-build-cpu.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies for Linux
         working-directory:  ./vendor/llama-cpp-python
         run: |
-          uv sync --extra all
+          uv sync --active --extra all
 
       - name: Build source distribution
         working-directory: ./vendor/llama-cpp-python
@@ -60,7 +60,7 @@ jobs:
       - name: Install dependencies for Linux
         working-directory:  ./vendor/llama-cpp-python
         run: |
-          uv sync --extra all
+          uv sync --active --extra all
         shell: bash
 
       - name: Build source distribution
